# nanoclaw

./: .claudeignore  .env.example  .gitignore  AGENTS.md  AI_AGENT_GUIDELINES.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  commitlint.config.js  commitlint.config.mjs  deus-cmd.ps1  deus-cmd.sh  eslint.config.js  package-lock.json  package.json  setup.sh  vitest.config.ts
.claude/: hooks.json  settings.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  labeler.yml  pull_request_template.md
.husky/: post-checkout  post-merge  pre-push
.mex/: ROUTER.md
container/: Dockerfile  build.sh
demo/: memory-map.html
docs/: AGENT_DEUS_101.md  APPLE-CONTAINER-NETWORKING.md  ARCHITECTURE.md  CONTRIBUTING-AI.md  CONTRIBUTING.md  CROSS_PLATFORM.md  DEVELOPMENT.md  EFFORT_AB_RESULTS.md  ENVIRONMENT.md  HEADROOM_POC.md  KNOWN_LIMITATIONS.md  MULTI_BACKEND.md  QUALITY_GRADES.md  REQUIREMENTS.md  SECURITY.md  SPEC.md  TOKEN_OPTIMIZATION.md  agent-agnostic-debt.md  architecture.md  benchmarks.md  session-type-contract.md  solution-atom-schema.md  windows-setup.md
eval/: README.md  agent_wrapper.py  conftest.py  judge_model.py  (+5 more)
tui/: Cargo.toml  README.md
tui/hooks/: permission-bridge.sh
tui/src/: app.rs  bidi.rs  clipboard.rs  highlight.rs  logo.rs  main.rs  notify.rs  permission_bridge.rs  platform.rs  theme.rs  ui.rs
tui/src/backend/: claude.rs  codex.rs  mod.rs
tui/src/config/: channels.rs  deus.rs  healthcheck.rs  mod.rs  permissions.rs  wardens.rs
tui/src/panels/: channels.rs  chat.rs  services.rs  status.rs  wardens.rs
(+533 files in other folders)
