[package]
name = "deus-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
libc = "0.2"
unicode-bidi = "0.3"
unicode-width = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
